--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "server": "file:",
     "svix": "^1.42.0"
   }
 }
