--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY= 'pk_test_bWFnbmV0aWMtdW5pY29ybi0xLmNsZXJrLmFjY291bnRzLmRldiQ'
-VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_BACKEND_URL = 'https://job-portal-full-stack-server-murex-alpha.vercel.app'
