--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.17.1",
     "axios": "^1.7.9",
+    "client": "file:",
     "k-convert": "^1.0.6",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
